--- a/main.css
+++ b/main.css
@@ -20,3 +20,12 @@ main {
 
   padding: 20px;
 }
+nav ul {
+  display: flex;
+
+  list-style-type: none;
+
+  justify-content: space-between;
+
+  padding: 0;
+}
